# ades

./: .env.example  .gitignore  .release-please-config.json  CHANGELOG.md  README.md  pyproject.toml
.docdex/: run-tests.json
docs/: ades_architecture.html  ades_chat_output.md  ades_high_level_architecture.docx  ades_sds.docx  bdya_ades_news_digestion_shadow_evaluation.md  big_data_workspace_manifest_2026-06-30.json  development_progress.md  finance_ar_en_update_guide.md  finance_country_library_guidelines.md  finance_de_en_update_guide.md  finance_fr_en_update_guide.md  finance_jp_en_update_guide.md  finance_uk_en_update_guide.md  finance_us_en_update_guide.md  how_ades_extracts_entities.md  how_ades_extracts_entities_alignment_audit.md  implementation_plan.md  library_pack_normalized_record_schema.md  library_pack_publication_workflow.md  library_pack_source_bundle_spec.md  module_functionality_progress.md  news_story_creation_ades_approved_deploy_runbook_2026-07-01.md  news_story_creation_ades_country_pack_coverage_inventory_2026-06-30.md  news_story_creation_ades_local_verification_runbook_2026-07-01.md  news_story_creation_ades_release_note_template_2026-07-01.md  news_story_creation_ades_source_lane_inventory_2026-06-30.md  next_work_items.md  production_deployment.md  project_guidance.md  public_ades_artifact_identity_baseline_2026-06-30.md  usage.md  v0.1.0_decisions.md
scripts/: README.md  apply_general_alias_exclusions.py  audit_newspaper_feeds.py  audit_saved_unseen_vector_neighbors.py  audit_source_licenses.py  audit_stale_relationships.py  (+14 more)
(+473 files in other folders)
