[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ades-tool"
version = "0.2.5"
description = "Local-first semantic enrichment service and Python library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Bekir Dag" },
]
dependencies = [
  "build>=1.2,<2.0",
  "fastapi>=0.111,<1.0",
  "httpx>=0.27,<1.0",
  "orjson>=3.10,<4.0",
  "pydantic>=2.7,<3.0",
  "twine>=5.1,<6.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.30,<1.0",
  "wordfreq>=3.1,<4.0",
  "zstandard>=0.23,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2.0",
  "psycopg[binary,pool]>=3.2,<4.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.4,<1.0",
]
server = [
  "psycopg[binary,pool]>=3.2,<4.0",
]

[project.scripts]
ades = "ades.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ades"]

[tool.hatch.build.targets.sdist]
include = [
  "/npm/ades",
  "/src/ades",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
